# myspice

./: README.md  pyproject.toml
docs/source/: about.rst  api.rst  conf.py  index.rst  install.rst  usage.rst
examples/: output1.txt  output2.txt  output3.txt  output4.txt
src/myspice/: io.py  ngextract.py
