[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "myspice"
version = "0.0.1"
authors = [
  { name="Angel Yanguas-Gil", email="angel.yanguas@gmail.com" },
]
description = "Python utilities for SPICE simulators"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anglyan/myspice"
"Bug Tracker" = "https://github.com/anglyan/myspice/issues"

