[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myspice"
version = "0.0.1"
authors = [
  { name="Angel Yanguas", email="angel.yanguas@gmail.com" },
]
description = "Python utilities for SPICE simulators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["spice", "simulation", "netlist"]
dependencies = [
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anglyan/myspice"
"Bug Tracker" = "https://github.com/anglyan/myspice/issues"

[project.scripts]
ngextract = "myspice.ngextract:main"

[tool.hatch.build.targets.wheel]
packages = ["src/myspice"]

